Cambios para no exponer datos sensibles en el front

--- a/env.sample
+++ b/env.sample
@@ -1,6 +1,6 @@
 #RECAPTCHA
 VITE_RECAPTCHA_SITE_KEY_V3= '6LeAKhkqAAAAADr644UXDMN-k_R8HH0dwsHCST1S'
-VITE_RECAPTCHA_SECRET_KEY_V3= '6LeAKhkqAAAAAFBwCjWCZ87pGZOp2JWp-PGau0d9'
+RECAPTCHA_SECRET_KEY_V3= '6LeAKhkqAAAAAFBwCjWCZ87pGZOp2JWp-PGau0d9'
 
 #MAILS GENERAL
 VITE_EMAIL_CHARSET='utf-8'
@@ -29,14 +29,14 @@ VITE_ENVIRONMENT= 'local'
 VITE_ROOT= 'http://centralnorte.test/'
 VITE_IS_PROMO='false'
 
-VITE_SMTP='0.0.0.0'
-VITE_EMAIL_CLIENT='testuser'
-VITE_PASSWORD='testpwd'
-VITE_EMAIL_PORT=1025
+SMTP='0.0.0.0'
+EMAIL_CLIENT='testuser'
+PASSWORD='testpwd'
+EMAIL_PORT=1025
 
-VITE_DSN='mysql:host=localhost;dbname=lc_central_norte;charset=utf8mb4;port:3306'
-VITE_DB_USER='homestead'
-VITE_DB_PASS='secret'
+DSN='mysql:host=localhost;dbname=lc_central_norte;charset=utf8mb4;port:3306'
+DB_USER='homestead'
+DB_PASS='secret'
 
 ##############################
 ### Valores Production
@@ -44,11 +44,11 @@ VITE_DB_PASS='secret'
 # VITE_ENVIRONMENT= 'production'
 # VITE_ROOT= 'https://centralnortesrl.com/landing/'
 
-# VITE_SMTP='mail.centralnortesrl.com'
-# VITE_EMAIL_CLIENT='info@centralnortesrl.com'
-# VITE_PASSWORD='Cn08082024.'
-# VITE_EMAIL_PORT='465'
+# SMTP='mail.centralnortesrl.com'
+# EMAIL_CLIENT='info@centralnortesrl.com'
+# PASSWORD='Cn08082024.'
+# EMAIL_PORT='465'
 
-# VITE_DSN='mysql:host=localhost;dbname=centralnorte_landing;charset=utf8mb4;port:3306'
-# VITE_DB_USER='centralnorte_landing'
-# VITE_DB_PASS='4XE8sbfXVC7wSKTbMf3x'
+# DSN='mysql:host=localhost;dbname=centralnorte_landing;charset=utf8mb4;port:3306'
+# DB_USER='centralnorte_landing'
+# DB_PASS='4XE8sbfXVC7wSKTbMf3x'
